--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -22,16 +22,16 @@
       id="user-email"
       placeholder="clients@gmail.com"
       pattern="^\w+(.\w+)?@[a-zA-Z_]+?.[a-zA-Z]{2,3}$"
-      title="Invalid email, try again"
       required
     />
+    <span class="footer-input-message"></span>
 
     <input class="form-input" id="user-comment" placeholder="comments">
     </input>
   </div>
-  <div class="right-section">
+  <!-- <div class="right-section"> -->
     <button class="btn-footer" type="submit" id="openModal">Send</button>
-  </div>
+  <!-- </div> -->
   <div class="form-contacts">
     <ul class="footer-contacts-list">
       <li class="footer-item">
