--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -9,15 +9,16 @@
   display: flex;
   padding: 64px 0;
   flex-direction: column;
-  height: 100vh;
-  background-position: top right;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url(../img/footer/elements.png);
+  
 }
 .footer-container {
+  display: flex;
   align-items: flex-start;
   flex-direction: column;
+  background-position: 285px 0px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url(/img/footer/elements.png);
 }
 .profile {
   padding-top: 32px;
@@ -45,6 +46,7 @@
 .work {
   color: #c6e327;
 }
+
 .form-row {
   display: flex;
   flex-direction: column;
@@ -212,9 +214,13 @@
   .footer-page {
     padding: 64px 0;
   }
+  .footer-container {
+      background-position: 565px 0px;
+  }
   .profile {
     padding-top: 80px;
     margin-bottom: 64px;
+    row-gap: 10px;
   }
   .title-footer,
   .footer-title-part2 {
@@ -232,6 +238,10 @@
     width: 70px;
     height: 70px;
   }
+
+    .form-inf {
+      position: relative;
+    }
   .form-row {
     display: flex;
     flex-direction: row;
@@ -249,8 +259,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: 16px;
-    top: auto;
+    right: -182px;
+    top: -30px;
     width: 150px;
     height: 150px;
   }
@@ -285,10 +295,13 @@
 }
 
 @media screen and (min-width: 1440px) {
+  
   .footer-input-email,
   .footer-input-comment {
     width: 390px;
     height: 44px;
   }
   
+  .footer-title-part2 {
+flex-basis: 100%;  }
 }
