--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -60,7 +60,7 @@
             >
             <a
               class="footer-contacts-link footer-phone"
-              href="+380 11 1111 11 11"
+              href="tel:+380 11 1111 11 11"
               >+380 11 1111 11 11</a
             >
           </li>
