--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,14 +1,15 @@
 .mobile-menu {
-    background-image: url('/img/hero/hero-mobile@1.png');
+    background-image: url(/img/mobile-menu/mobile-menu@1.png);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #1c1d20;
-    background-position: left top;
     background-repeat: repeat-y;
-    background-size: 412px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     z-index: 99999;
     opacity: 0;
     visibility: hidden;
@@ -18,7 +19,7 @@
 }
 @media screen and (min-resolution: 192dpi) {
     .hero {
-        background-image: url(/img/hero/hero_mobile@2.png);
+        background-image: url(/img/mobile-menu/mobile-menu@1.png);
     }
 }
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -89,7 +90,7 @@
 
 .mobile-menu-item:hover,
 .mobile-menu-item:focus {
-    color: #4ec12e;
+    color: #c7e327c5;
 }
 
 .mobile-menu-order {
@@ -97,7 +98,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 60px;
-    background-color: #4ed728;
+    background-color: #C6E327;
     padding: 14px 31px;
     min-width: 164px;
     height: 45px;
@@ -113,7 +114,7 @@
 
 .mobile-menu-order:hover,
 .mobile-menu-order:focus {
-    background-color: #4ec12e;
+    background-color: #c7e327c5;
 }
 
 @media only screen and (min-width: 768px) {
