--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -55,7 +55,7 @@
           <li class="footer-item">
             <a
               class="footer-contacts-link footer-email"
-              href="lloydjefferson@gmail.com"
+              href="mailto:lloydjefferson@gmail.com"
               >lloydjefferson@gmail.com</a
             >
             <a
@@ -77,7 +77,6 @@
         width="24"
         height="24"
         viewBox="0 0 24 24"
-        fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
@@ -94,6 +93,7 @@
           stroke-linecap="round"
           stroke-linejoin="round"
         />
+        >
       </svg>
     </button>
     <h1 class="title-modal">Thank you for your interest in cooperation!</h1>
