--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -30,27 +30,18 @@
           <div class="projects-images">
             <picture>
               <source
-                media="(min-width: 1440px)"
+                media="(min-width: 768px)"
                 srcset="
-                  ./img/projects/projects1_tablet-desktop@1.png,
-                  ./img/projects/projects1_tablet-desktop@2.png
+                  ./img/projects/projects1_tablet-desktop@1.png 1x,
+                  ./img/projects/projects1_tablet-desktop@2.png 2x
                 "
-                type="img/png"
               />
 
               <source
-                media="(min-width: 768px)"
-                srcset="
-                  ./img/projects/projects1_tablet-desktop@1.png,
-                  ./img/projects/projects1_tablet-desktop@2.png
-                "
-                type="img/png"
-              />
-              <source
                 media="(max-width: 767px)"
                 srcset="
-                  ./img/projects/projects1_mobile@1.png,
-                  ./img/projects/projects1_mobile@2.png
+                  ./img/projects/projects1_mobile@1.png 1x,
+                  ./img/projects/projects1_mobile@2.png 2x
                 "
               />
               <img
@@ -89,33 +80,23 @@
           <div class="projects-images">
             <picture>
               <source
-                media="(min-width: 1440px)"
-                srcset="
-                  ./img/projects/projects2_tablet-desktop@1.png,
-                  ./img/projects/projects2_tablet-desktop@2.png
-                "
-                type="img/png"
-              />
-
-              <source
                 media="(min-width: 768px)"
                 srcset="
-                  ./img/projects/projects2_tablet-desktop@1.png,
-                  ./img/projects/projects2_tablet-desktop@2.png
+                  ./img/projects/projects2_tablet-desktop@1.png 1x,
+                  ./img/projects/projects2_tablet-desktop@2.png 2x
                 "
-                type="img/png"
               />
               <source
                 media="(max-width: 767px)"
                 srcset="
-                  ./img/projects/projects2_mobile@1.png,
-                  ./img/projects/projects2_mobile@2.png
+                  ./img/projects/projects2_mobile@1.png 1x,
+                  ./img/projects/projects2_mobile@2.png 2x
                 "
               />
               <img
                 src="./img/projects/projects2_mobile@1.png"
                 alt="projects-img"
-                width="614"
+                width="311"
               />
             </picture>
           </div>
@@ -148,33 +129,23 @@
           <div class="projects-images">
             <picture>
               <source
-                media="(min-width: 1440px)"
-                srcset="
-                  ./img/projects/projects3_tablet-desktop@1.png,
-                  ./img/projects/projects3_tablet-desktop@2.png
-                "
-                type="img/png"
-              />
-
-              <source
                 media="(min-width: 768px)"
                 srcset="
-                  ./img/projects/projects3_tablet-desktop@1.png,
-                  ./img/projects/projects3_tablet-desktop@2.png
+                  ./img/projects/projects3_tablet-desktop@1.png 1x,
+                  ./img/projects/projects3_tablet-desktop@2.png 2x
                 "
-                type="img/png"
               />
               <source
                 media="(max-width: 767px)"
                 srcset="
-                  ./img/projects/projects3_mobile@1.png,
-                  ./img/projects/projects3_mobile@2.png
+                  ./img/projects/projects3_mobile@1.png 1x,
+                  ./img/projects/projects3_mobile@2.png 2x
                 "
               />
               <img
                 src="./img//projects/projects3_mobile@1.png"
                 alt="projects-img"
-                width="614"
+                width="311"
               />
             </picture>
           </div>
