--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -30,7 +30,6 @@
 .text-benefits {
   margin-top: 8px;
   font-weight: 500;
-  /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: -0.02em;
   color: rgba(250, 250, 250, 0.6);
@@ -44,11 +43,12 @@
   padding: 18px 36px;
   border-radius: 60px;
   border: solid 1px rgba(250, 250, 250, 0.2);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .benefits-link:hover,
 .benefits-link:focus {
-  border: 2px solid #fafafa;
+  outline: 2px solid #fafafa;
 }
 
 /* Benefits section tablet */
