--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,124 +1,117 @@
 .mobile-menu {
-    background-image: url(/img/mobile-menu/mobile-menu@1.png);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #1c1d20;
-    background-repeat: repeat-y;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 99999;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transform: translateX(100%);
-    transition: opacity 450ms ease, visibility 450ms ease, transform 450ms ease;
+  background-image: url(/img/mobile-menu/mobile-menu@1.png);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1d20;
+  background-repeat: repeat-y;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 99999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: translateX(100%);
+  transition: opacity 450ms ease, visibility 450ms ease, transform 450ms ease;
 }
 @media screen and (min-resolution: 192dpi) {
-    .hero {
-        background-image: url(/img/mobile-menu/mobile-menu@1.png);
-    }
-}
-@media screen and (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 2dppx),
-(min-resolution: 192dpi) {
-    .mobile-menu {
-        background-color: #1c1d20;
-    }
+  .hero {
+    background-image: url(/img/mobile-menu/mobile-menu@2.png);
+  }
 }
 
 .mobile-menu.show {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-    transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transform: translateY(0);
 }
 
 .mobile-menu-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 302px 0 64px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 30% 0 64px;
 }
 
 .mobile-menu-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .mobile-menu-button {
-    position: absolute;
-    top: 32px;
-    right: 16px;
-    background: transparent;
-    border: none;
+  position: absolute;
+  top: 32px;
+  right: 16px;
+  background: transparent;
+  border: none;
 }
 
 .mobile-menu-close {
-    stroke: #fafafa;
+  stroke: #fafafa;
 }
 
 .mobile-menu-nav {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile-menu-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 15%;
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 450ms ease, visibility 450ms ease;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15%;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 450ms ease, visibility 450ms ease;
 }
 
 .mobile-menu-item {
-    font-weight: 500;
-    text-decoration: underline;
-    transition: color 450ms ease;
+  font-weight: 500;
+  text-decoration: underline;
+  transition: color 450ms ease;
 }
 
 .mobile-menu-item:hover,
 .mobile-menu-item:focus {
-    color: #c7e327c5;
+  color: #c7e327c5;
 }
 
 .mobile-menu-order {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 60px;
-    background-color: #C6E327;
-    padding: 14px 31px;
-    min-width: 164px;
-    height: 45px;
-    font-weight: 500;
-    font-size: 14px;
-    opacity: 1;
-    visibility: visible;
-    margin-left: auto;
-    margin-right: auto;
-    transition: opacity 450ms ease, visibility 450ms ease,
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 60px;
+  background-color: #c6e327;
+  padding: 14px 31px;
+  min-width: 164px;
+  height: 45px;
+  font-weight: 500;
+  font-size: 14px;
+  opacity: 1;
+  visibility: visible;
+  margin-left: auto;
+  margin-right: auto;
+  transition: opacity 450ms ease, visibility 450ms ease,
     background-color 450ms ease;
 }
 
 .mobile-menu-order:hover,
 .mobile-menu-order:focus {
-    background-color: #c7e327c5;
+  background-color: #c7e327c5;
 }
 
 @media only screen and (min-width: 768px) {
-    .mobile-menu {
-        display: none;
-    }
+  .mobile-menu {
+    display: none;
+  }
 }
