--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -2,7 +2,7 @@
   margin-bottom: 32px;
 }
 .reviews-swiper.swiper {
-  width: 344px;
+  min-width: 288px;
 }
 .reviews-list.swiper-wrapper {
   display: flex;
@@ -13,7 +13,7 @@
   background-color: transparent;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 20px;
-  padding: 32px 24px;
+  padding: 15px;
   height: 350px;
   flex-shrink: 0;
 }
@@ -63,6 +63,11 @@
 .reviews-prev-btn:disabled {
   opacity: 0.2;
   pointer-events: none;
+}
+@media only screen and (min-width: 375px) {
+  .reviews-item.swiper-slide {
+    padding: 32px 24px;
+  }
 }
 
 @media screen and (min-width: 768px) {
