--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -9,7 +9,6 @@
   display: flex;
   padding: 64px 0;
   flex-direction: column;
-  
 }
 .footer-container {
   display: flex;
@@ -18,7 +17,8 @@
   background-position: 285px 0px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url(/img/footer/elements.png), url(/img/footer/elements2x.png);
+  background-image: url(/img/footer/elements.png),
+    url(/img/footer/elements2x.png);
 }
 .profile {
   padding-top: 32px;
@@ -214,7 +214,7 @@
     padding: 64px 0;
   }
   .footer-container {
-      background-position: 565px 0px;
+    background-position: 565px 0px;
   }
   .profile {
     padding-top: 80px;
@@ -238,9 +238,9 @@
     height: 70px;
   }
 
-    .form-inf {
-      position: relative;
-    }
+  .form-inf {
+    position: relative;
+  }
   .form-row {
     display: flex;
     flex-direction: row;
@@ -294,13 +294,13 @@
 }
 
 @media screen and (min-width: 1440px) {
-  
   .footer-input-email,
   .footer-input-comment {
     width: 390px;
     height: 44px;
   }
-  
+
   .footer-title-part2 {
-flex-basis: 100%;  }
+    flex-basis: 100%;
+  }
 }
