--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,5 @@
 <section class="sections-paddings faq" id="faq-section">
-  <div class="container ">
+  <div class="container">
     <h2 class="section-title faq-title">FAQ</h2>
 
     <div class="faq-wrapper">
@@ -14,12 +14,16 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p>
+            <p class="faq-text">
+              In the field of web development, there are various technologies
+              and programming languages. Typically, this includes a combination
+              of frontend (client side) and backend (server side) languages.
+            </p>
           </div>
         </li>
 
         <li class="accordion-item ac" data-order="2">
-          <button type="button"  class="ac-trigger">
+          <button type="button" class="ac-trigger">
             How can I contact you?
             <div class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
@@ -28,7 +32,11 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p>
+            <p class="faq-text">
+              In the field of web development, there are various technologies
+              and programming languages. Typically, this includes a combination
+              of frontend (client side) and backend (server side) languages.
+            </p>
           </div>
         </li>
 
@@ -42,10 +50,16 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p>
+            <p class="faq-text">
+              The terms of project implementation depend to a large extent on a
+              number of factors, such as the scope of the project, its
+              complexity, and the availability of resources. Determining exact
+              deadlines is a difficult task, and it usually occurs during the
+              planning phase of the project.
+            </p>
           </div>
         </li>
-  
+
         <li class="accordion-item ac" data-order="4">
           <button type="button" class="ac-trigger">
             Do you provide advice or support?
@@ -56,7 +70,13 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p>
+            <p class="faq-text">
+              The terms of project implementation depend to a large extent on a
+              number of factors, such as the scope of the project, its
+              complexity, and the availability of resources. Determining exact
+              deadlines is a difficult task, and it usually occurs during the
+              planning phase of the project.
+            </p>
           </div>
         </li>
 
@@ -70,13 +90,18 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
+            <p class="faq-text">
+              Payment through credit and debit cards such as Visa, MasterCard,
+              specialized electronic payment systems such as PayPal, as well as
+              payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+            </p>
           </div>
         </li>
 
         <li class="accordion-item ac" data-order="6">
           <button type="button" class="ac-trigger">
-            What does the process of developing a software product look like from idea to implementation?
+            What does the process of developing a software product look like
+            from idea to implementation?
             <div class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
@@ -84,7 +109,11 @@
             </div>
           </button>
           <div class="ac-panel">
-            <p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
+            <p class="faq-text">
+              Payment through credit and debit cards such as Visa, MasterCard,
+              specialized electronic payment systems such as PayPal, as well as
+              payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+            </p>
           </div>
         </li>
       </ul>
