--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -25,10 +25,11 @@
         />
       </picture>
       <h2 class="title-footer">
-        Let's
-        <span class="work">work </span>
+        <span class="title-footer-inline">
+          Let's <span class="work">work </span></span
+        >
+        <span class="title-footer-block">together</span>
       </h2>
-      <p class="footer-title-part2">together</p>
     </div>
     <form class="form-inf" id="form-inf">
       <div class="form-row">
