--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -7,11 +7,11 @@
         <li class="accordion-item ac" data-order="1">
           <button type="button" class="ac-trigger">
             What programming languages are most often used in your project?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
@@ -25,11 +25,11 @@
         <li class="accordion-item ac" data-order="2">
           <button type="button" class="ac-trigger">
             How can I contact you?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
@@ -43,11 +43,11 @@
         <li class="accordion-item ac" data-order="3">
           <button type="button" class="ac-trigger">
             What are the deadlines for the project?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
@@ -63,11 +63,11 @@
         <li class="accordion-item ac" data-order="4">
           <button type="button" class="ac-trigger">
             Do you provide advice or support?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
@@ -83,11 +83,11 @@
         <li class="accordion-item ac" data-order="5">
           <button type="button" class="ac-trigger">
             What payment methods do you accept?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
@@ -102,11 +102,11 @@
           <button type="button" class="ac-trigger">
             What does the process of developing a software product look like
             from idea to implementation?
-            <div class="faq-icon-wrapper">
+            <span class="faq-icon-wrapper">
               <svg class="accordion-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-arrow-up"></use>
               </svg>
-            </div>
+            </span>
           </button>
           <div class="ac-panel">
             <p class="faq-text">
