--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -74,27 +74,8 @@
 <div id="footer-modal" class="modal">
   <div class="modal-content">
     <button class="close-btn" id="close-btn">
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M18 6L6 18"
-          stroke="#FAFAFA"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <path
-          d="M6 6L18 18"
-          stroke="#FAFAFA"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        >
+      <svg class="close-btn-icon" width="24" height="24">
+        <use href="./img/sprite.svg#icon-x"></use>
       </svg>
     </button>
     <h1 class="title-modal">Thank you for your interest in cooperation!</h1>
