--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,6 +7,7 @@
             ./img/header/icon_header@1.png 1x,
             ./img/header/icon_header@2.png 2x
           "
+          src="./img/header/icon_header@1.png"
           alt="jefferson"
           width="80"
           height="80"
