--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -24,12 +24,12 @@
           height="44"
         />
       </picture>
-      <h2 class="title-footer">
-        <span class="title-footer-inline">
-          Let's <span class="work">work </span></span
-        >
-        <span class="title-footer-block">together</span>
-      </h2>
+      <!-- <h2 class="title-footer"> -->
+      <span class="title-footer-inline">
+        Let's <span class="work">work </span></span
+      >
+      <span class="title-footer-block">together</span>
+      <!-- </h2> -->
     </div>
     <form class="form-inf" id="form-inf">
       <div class="form-row">
