--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -37,6 +37,7 @@
           alt="me-photo"
           width="343"
           height="500"
+          loading="lazy"
         />
       </picture>
     </div>
