--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -18,6 +18,7 @@
               src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -35,6 +36,7 @@
               src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -52,6 +54,7 @@
               src="./img/covers/project2@1.png"
               alt="mimino banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -69,6 +72,7 @@
               src="./img/covers/project3@1.png"
               alt="vyshyvanka banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -88,6 +92,7 @@
               src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -105,6 +110,7 @@
               src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -122,6 +128,7 @@
               src="./img/covers/project2@1.png"
               alt="mimino banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -139,6 +146,7 @@
               src="./img/covers/project3@1.png"
               alt="vyshyvanka banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -159,6 +167,7 @@
               src="./img/covers/project4@1.png"
               alt="green harvest banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -176,6 +185,7 @@
               src="./img/covers/project5@1.png"
               alt="wallet banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -193,6 +203,7 @@
               src="./img/covers/project6@1.png"
               alt="chego banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -210,6 +221,7 @@
               src="./img/covers/project9@1.png"
               alt="english excellence banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -229,6 +241,7 @@
               src="./img/covers/project4@1.png"
               alt="green harvest banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -246,6 +259,7 @@
               src="./img/covers/project5@1.png"
               alt="wallet banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -263,6 +277,7 @@
               src="./img/covers/project6@1.png"
               alt="chego banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -280,6 +295,7 @@
               src="./img/covers/project9@1.png"
               alt="english excellence banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -300,6 +316,7 @@
               src="./img/covers/project8@1.png"
               alt="fruit box banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -317,6 +334,7 @@
               src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -335,6 +353,7 @@
               src="./img/covers/project10@1.png"
               alt="starlight studio banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -352,6 +371,7 @@
               src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -371,6 +391,7 @@
               src="./img/covers/project8@1.png"
               alt="fruit box banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -388,6 +409,7 @@
               src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -405,6 +427,7 @@
               src="./img/covers/project10@1.png"
               alt="starlight studio banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
@@ -422,6 +445,7 @@
               src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
+              loading="lazy"
             />
           </picture>
         </li>
