--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,6 +11,7 @@
           alt="jefferson"
           width="80"
           height="80"
+          loading="lazy"
         />
         jefferson*
       </a>
