--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
-<section>
-  <div class="hero container">
+<section class="hero">
+  <div class="container hero-container">
     <h1 class="hero-title section-title">
       hello. i'm fullstack developer lloyd jefferson.
     </h1>
