--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -48,6 +48,7 @@
                 src="./img/projects/projects1_mobile@1.png"
                 alt="projects-img"
                 width="311"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -97,6 +98,7 @@
                 src="./img/projects/projects2_mobile@1.png"
                 alt="projects-img"
                 width="311"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -146,6 +148,7 @@
                 src="./img//projects/projects3_mobile@1.png"
                 alt="projects-img"
                 width="311"
+                loading="lazy"
               />
             </picture>
           </div>
