--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -7,7 +7,8 @@
 }
 .footer-page {
   display: flex;
-  padding: 64px 0;
+  padding-top: 64px;
+  padding-bottom: 32px;
   flex-direction: column;
 }
 .footer-container {
@@ -25,22 +26,12 @@
   }
 }
 
-.profile {
-  padding-top: 32px;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 8px;
-  max-width: max-content;
-  margin-bottom: 63px;
-}
 .footer-picture {
   display: flex;
   flex-shrink: 0;
   width: 44px;
   height: 44px;
   border-radius: 12px;
-  margin-right: 8px;
 }
 
 .title-footer {
@@ -51,9 +42,14 @@
   text-transform: uppercase;
   color: var(--main-text);
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 15px;
-  row-gap: 8px;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 63px;
+}
+
+.title-wrap {
+  display: flex;
+  gap: 8px;
 }
 
 .work {
@@ -223,11 +219,14 @@
   transition: transform 0.2s ease;
   fill: #fafafa;
 }
+
 @media screen and (min-width: 768px) {
   .footer-page {
-    padding: 64px 0;
+    padding-top: 136px;
+    padding-bottom: 169px;
   }
   .footer-container {
+    width: 100%;
     background-image: url(/img/footer/bg-footer-tablet.png);
     background-position: 575px 0px;
   }
@@ -236,22 +235,22 @@
       background-image: url(/img/footer/bg-footer-tablet@2x.png);
     }
   }
-  .profile {
-    padding-top: 80px;
+
+  .title-footer {
     margin-bottom: 64px;
-    row-gap: 10px;
   }
+
   .title-footer,
   .footer-title-part2 {
     font-size: 64px;
   }
+
   .footer-picture {
     display: flex;
     flex-shrink: 0;
     width: 70px;
     height: 70px;
     border-radius: 24px;
-    margin-right: 20px;
   }
   .logo-footer-img {
     width: 70px;
@@ -260,8 +259,8 @@
 
   .form-inf {
     position: relative;
-    min-width: 288px;
-    max-width: 375px;
+
+    max-width: 622px;
   }
   .form-row {
     display: flex;
@@ -280,7 +279,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: -330px;
+    right: -64px;
     top: -30px;
     width: 150px;
     height: 150px;
@@ -316,6 +315,10 @@
 }
 
 @media screen and (min-width: 1440px) {
+  .footer-page {
+    padding-top: 170px;
+  }
+
   .footer-container {
     width: 100%;
     padding-left: 196px;
@@ -333,8 +336,12 @@
     max-width: 812px;
   }
 
-  .form-row {
-    width: 100%;
+  .title-footer {
+    flex-direction: column;
+  }
+
+  .title-wrap {
+    display: flex;
   }
 
   .footer-input-email,
@@ -344,6 +351,5 @@
   }
   .btn-footer {
     right: -240px;
-
   }
 }
