--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,9 +5,9 @@
   overflow: hidden;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 375px 812px;
-  width: 100%;
-  height: 812px;
+  background-size: cover;
+  padding-top: 281px;
+  padding-bottom: 32px;
 }
 
 .hero-title {
@@ -15,16 +15,10 @@
   font-weight: 500;
   line-height: 1;
   letter-spacing: -0.03em;
-  padding: 281px 16px 180px 16px;
   opacity: 1;
   color: #fafafa;
   text-transform: uppercase;
-}
-
-@media screen and (min-width: 374px) {
-  .hero-title {
-    padding-bottom: 212px;
-  }
+  margin-bottom: 212px;
 }
 
 @media screen and (min-device-pixel-ratio: 2),
@@ -85,10 +79,7 @@
 @media screen and (min-width: 768px) {
   .hero {
     background-image: url(/img/hero/hero_tablet@1.png);
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-size: 768px 1024px;
-    height: 1024px;
+    padding-top: 300px;
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -103,10 +94,7 @@
     font-size: 90px;
     font-weight: 500;
     line-height: 1;
-    padding-top: 300px;
-    padding-right: 104px;
-    padding-bottom: 187px;
-    padding-left: 32px;
+    margin-bottom: 187px;
   }
 
   .hero-social-links-list {
@@ -131,10 +119,10 @@
 @media screen and (min-width: 1440px) {
   .hero {
     background-image: url(/img/hero/hero@1.png);
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-size: 1440px 900px;
-    height: 900px;
+  }
+
+  .hero-container {
+    padding-left: 178px;
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -146,9 +134,6 @@
   }
 
   .hero-title {
-    padding-top: 300px;
-    padding-right: 178px;
-    padding-bottom: 243px;
-    padding-left: 178px;
+    margin-bottom: 243px;
   }
 }
