--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -7,7 +7,8 @@
 }
 .footer-page {
   display: flex;
-  padding: 64px 0;
+  padding-top: 64px;
+  padding-bottom: 32px;
   flex-direction: column;
 }
 .footer-container {
@@ -25,26 +26,15 @@
   }
 }
 
-.profile {
-  padding-top: 32px;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 8px;
-  max-width: max-content;
-  margin-bottom: 63px;
-}
 .footer-picture {
   display: flex;
   flex-shrink: 0;
   width: 44px;
   height: 44px;
   border-radius: 12px;
-  margin-right: 8px;
 }
 
-.title-footer-inline,
-.title-footer-block {
+.title-footer {
   font-weight: 500;
   font-size: 40px;
   line-height: 100%;
@@ -52,17 +42,21 @@
   text-transform: uppercase;
   color: var(--main-text);
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 15px;
-  row-gap: 8px;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 63px;
+}
+
+.title-wrap {
+  display: flex;
+  gap: 8px;
 }
 
 .work {
   color: #c6e327;
 }
 .form-inf {
-  min-width: 288px;
-  max-width: 343px;
+  width: 100%;
 }
 .form-row {
   display: flex;
@@ -86,11 +80,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.footer-input-email:focus,
-.footer-input-comment:focus {
+.footer-input-email,
+.footer-input-comment:focus:active {
   color: var(--main-text);
-  border-color: rgba(250, 250, 250, 0.5);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.5);
 }
 .btn-footer {
   border-radius: 100%;
@@ -103,7 +96,6 @@
   cursor: pointer;
   margin-left: 16px;
   margin-bottom: 64px;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 .btn-footer:hover,
 .btn-footer:focus {
@@ -192,7 +184,7 @@
   border: 1px solid rgba(250, 250, 250, 0.1);
   border-radius: 20px;
   padding: 64px 32px;
-  width: 288px;
+  width: 343px;
   height: 276px;
   position: fixed;
   background: var(--background);
@@ -227,21 +219,14 @@
   transition: transform 0.2s ease;
   fill: #fafafa;
 }
-@media only screen and (min-width: 375px) {
-  .modal-content {
-    width: 343px;
-  }
-  .form-inf {
-    min-width: unset;
-    max-width: unset;
-    width: 343px;
-  }
-}
+
 @media screen and (min-width: 768px) {
   .footer-page {
-    padding: 64px 0;
+    padding-top: 136px;
+    padding-bottom: 169px;
   }
   .footer-container {
+    width: 100%;
     background-image: url(/img/footer/bg-footer-tablet.png);
     background-position: 575px 0px;
   }
@@ -250,25 +235,22 @@
       background-image: url(/img/footer/bg-footer-tablet@2x.png);
     }
   }
-  .profile {
-    flex-direction: row;
-    padding-top: 80px;
+
+  .title-footer {
     margin-bottom: 64px;
-    row-gap: 10px;
-    width: 542px;
   }
-  .title-footer-inline,
-  .title-footer-block,
+
+  .title-footer,
   .footer-title-part2 {
     font-size: 64px;
   }
+
   .footer-picture {
     display: flex;
     flex-shrink: 0;
     width: 70px;
     height: 70px;
     border-radius: 24px;
-    margin-right: 20px;
   }
   .logo-footer-img {
     width: 70px;
@@ -277,7 +259,8 @@
 
   .form-inf {
     position: relative;
-    width: 522px;
+
+    max-width: 622px;
   }
   .form-row {
     display: flex;
@@ -296,7 +279,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: -180px;
+    right: -64px;
     top: -30px;
     width: 150px;
     height: 150px;
@@ -332,6 +315,10 @@
 }
 
 @media screen and (min-width: 1440px) {
+  .footer-page {
+    padding-top: 170px;
+  }
+
   .footer-container {
     width: 100%;
     padding-left: 196px;
@@ -346,11 +333,15 @@
   }
 
   .form-inf {
-    width: 812px;
+    max-width: 812px;
   }
 
-  .form-row {
-    width: 100%;
+  .title-footer {
+    flex-direction: column;
+  }
+
+  .title-wrap {
+    display: flex;
   }
 
   .footer-input-email,
