--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -1,36 +1,37 @@
 <footer class="footer-page" id="work-together">
   <div class="container footer-container">
-    <div class="profile">
-      <picture class="footer-picture">
-        <source
-          srcset="
-            ./img/footer/icon_footer@1.png 1x,
-            ./img/footer/icon_footer@2.png 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
-            ./img/footer/icon_footer_mobile@1.png 1x,
-            ./img/footer/icon_footer_mobile@2.png 2x
-          "
-          media="(max-width: 767px)"
-        />
-        <img
-          class="logo-footer-img"
-          src="./img/footer/icon_footer_mobile@1.png"
-          alt="Footer Icon"
-          width="44"
-          height="44"
-        />
-      </picture>
-      <!-- <h2 class="title-footer"> -->
-      <span class="title-footer-inline">
-        Let's <span class="work">work </span></span
-      >
+    <h2 class="title-footer">
+      <span class="title-wrap">
+        <picture class="footer-picture">
+          <source
+            srcset="
+              ./img/footer/icon_footer@1.png 1x,
+              ./img/footer/icon_footer@2.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./img/footer/icon_footer_mobile@1.png 1x,
+              ./img/footer/icon_footer_mobile@2.png 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <img
+            class="logo-footer-img"
+            src="./img/footer/icon_footer_mobile@1.png"
+            alt="Footer Icon"
+            width="44"
+            height="44"
+            loading="lazy"
+          />
+        </picture>
+        <span class="title-footer-inline">
+          Let's <span class="work">work </span>
+        </span>
+      </span>
       <span class="title-footer-block">together</span>
-      <!-- </h2> -->
-    </div>
+    </h2>
     <form class="form-inf" id="form-inf">
       <div class="form-row">
         <div class="footer-form-email">
@@ -61,8 +62,8 @@
             >
             <a
               class="footer-contacts-link footer-phone"
-              href="tel:+380 11 1111 11 11"
-              >+380 11 1111 11 11</a
+              href="tel:+3801111111111"
+              >+380 111 11 11 11</a
             >
           </li>
         </ul>
@@ -78,7 +79,7 @@
         <use href="./img/sprite.svg#icon-x"></use>
       </svg>
     </button>
-    <h1 class="title-modal">Thank you for your interest in cooperation!</h1>
+    <h2 class="title-modal">Thank you for your interest in cooperation!</h2>
     <p class="text-modal">
       The manager will contact you shortly to discuss further details and
       opportunities for cooperation. Please stay in touch.
