--- a/src/css/header.css
+++ b/src/css/header.css
@@ -88,6 +88,7 @@
   }
 
   .menu {
+    padding-top: 10px;
     border: none;
     font-weight: 500;
     color: #fafafa;
@@ -136,9 +137,7 @@
   .menu-list li:last-child {
     margin-bottom: 10px;
   }
-  .logo-container {
-    margin-top: 20px;
-  }
+
   .order-project {
     display: flex;
     align-items: center;
@@ -151,7 +150,6 @@
     max-width: 163px;
     height: 55px;
     font-weight: 500;
-    margin-top: 25px;
     font-size: 16px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     transition: background-color 450ms ease;
